--- a/src/gui/Makefile
+++ b/src/gui/Makefile
@@ -1,29 +1,67 @@
-DIRECTORY_BIN = bin
+NAME = Submarine
+OBJECTS = mathematics.o config.o component.o panel.o main.o
+
+
+# DIRECTORIES
+
+DIRECTORY_BIN_LINUX = linux
+DIRECTORY_BIN_WINDOWS = win
+
 DIRECTORY_SRC = src
 DIRECTORY_INC = include
+DIRECTORY_LIB = lib
 
-LIBS = -lsfml-graphics -lsfml-window -lsfml-system
-FLAGS = -Wall -std=gnu++0x
 
-CC = g++
+# COMPILER FLAGS
 
-OBJECTS = gui.o button.o component.o panel.o main.o
+MINGW = i686-w64-mingw32-g++
+CPP = g++
 
-TARGET = $(DIRECTORY_BIN)/Submarine
+FLAGS_LINUX = -Wall -std=gnu++0x
+FLAGS_WINDOWS = -std=c++11 -static -mwindows -DSFML_SHARED 
 
-DEPS = $(patsubst %, $(DIRECTORY_BIN)/%, $(OBJECTS))
+LIBS_LINUX = -lpthread -lsfml-graphics -lsfml-window -lsfml-system
+LIBS_WINDOWS = -L/usr/i686-w64-mingw32/lib -lsfml-audio-s -lsfml-graphics-s -lsfml-window-s -lsfml-system-s
 
-default: $(TARGET)
 
-$(DIRECTORY_BIN)/%.o: $(DIRECTORY_SRC)/%.cpp
-	$(CC) $(FLAGS) -I$(DIRECTORY_INC) -c $^ -o $@  
+# EXECUTABLES FILES
 
-$(TARGET): $(DEPS)
-	$(CC) $(DEPS) $(LIBS) $(FLAGS) -o $@
+TARGET_LINUX = $(DIRECTORY_BIN_LINUX)/$(NAME)
+TARGET_WINDOWS = $(DIRECTORY_BIN_WINDOWS)/$(NAME).exe
 
-.PHONY: clean
-clean:
-	-rm -f $(DEPS) $(DIRECTORY_BIN)/$(TARGET)
+DEPS_LINUX = $(patsubst %, $(DIRECTORY_BIN_LINUX)/%, $(OBJECTS))
+DEPS_WINDOWS = $(patsubst %, $(DIRECTORY_BIN_WINDOWS)/%, $(OBJECTS))
 
-run:
-	./$(TARGET)
+
+# COMMANDS
+
+clearConsole:
+	-clear;
+
+clean: clearConsole
+	-rm -f $(DEPS_LINUX) $(DEPS_WINDOWS) $(TARGET_LINUX) $(TARGET_WINDOWS)
+
+run: clearConsole
+	./$(TARGET_LINUX)
+
+
+#BUILD FOR WINDOWS
+
+$(DIRECTORY_BIN_WINDOWS)/%.o: $(DIRECTORY_SRC)/%.cpp
+	$(MINGW) $(FLAGS_WINDOWS) -I$(DIRECTORY_INC) -c $^ -o $@
+
+$(TARGET_WINDOWS): $(DEPS_WINDOWS)
+	$(MINGW) $(DEPS_WINDOWS) $(LIBS_WINDOWS) $(FLAGS_WINDOWS) -o $@
+
+buildForWindows: clearConsole $(TARGET_WINDOWS)
+
+
+# BUILD FOR LINUX
+
+$(DIRECTORY_BIN_LINUX)/%.o: $(DIRECTORY_SRC)/%.cpp
+	$(CPP) $(FLAGS_LINUX) -I$(DIRECTORY_INC) -c $^ -o $@
+
+$(TARGET_LINUX): $(DEPS_LINUX)
+	$(CPP) $(DEPS_LINUX) $(LIBS_LINUX) $(FLAGS_LINUX) -o $@
+
+buildForLinux: clearConsole $(TARGET_LINUX)
